# pgai-novelrag

./: README.md  alembic.ini  compose.yml  pyproject.toml  start.sh
alembic/: env.py
alembic/versions/: 0001_create_novel_tables.py  0002_create_episode_vectorizer.py
app/: chunk_models.py  database.py  insert_data.py  main.py  models.py
naiverag/: main.py
