[project]
name = "pgai-novelrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "filetype>=1.2.0",
    "ijson>=3.4.0.post0",
    "openai>=2.15.0",
    "pgai[sqlalchemy]>=0.12.1",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.2",
    "sqlmodel>=0.0.31",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.2",
]
